Alterações antes do pull da ana

--- a/app/src/main/res/layout/activity_help_button.xml
+++ b/app/src/main/res/layout/activity_help_button.xml
@@ -4,25 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageEmergencyContactsActivity">
-
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_slab"
-        android:text="Cadastro de Contatos de Emergência"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.032" />
+    tools:context=".HelpButton">
 
     <Button
-        android:id="@+id/register_emergency_contact_button"
+        android:id="@+id/helpButton"
+        android:layout_width="240dp"
+        android:layout_height="234dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Pedir Ajuda"
+        app:layout_constraintBottom_toTopOf="@+id/manageEmergencyContacts"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/manageEmergencyContacts"
         android:layout_width="319dp"
         android:layout_height="35dp"
         android:layout_marginBottom="8dp"
@@ -31,7 +30,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/holo_orange_light"
         android:fontFamily="@font/roboto_slab"
-        android:text="Adicionar Contato"
+        android:text="Gerenciar contatos de Emergência"
         android:textColor="@android:color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +38,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:layout_constraintVertical_bias="0.98" />
-
-
 
 </android.support.constraint.ConstraintLayout>
