--- a/app/src/main/res/layout/activity_manage_emergency_contacts.xml
+++ b/app/src/main/res/layout/activity_manage_emergency_contacts.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ManageEmergencyContactsActivity">
 
     <TextView
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/roboto_slab"
         android:text="Cadastro de Contatos de Emergência"
         android:textColor="@android:color/black"
@@ -25,10 +28,9 @@
         android:id="@+id/register_emergency_contact_button"
         android:layout_width="319dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
         android:background="@android:color/holo_orange_light"
         android:fontFamily="@font/roboto_slab"
         android:text="Adicionar Contato"
@@ -40,6 +42,16 @@
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:layout_constraintVertical_bias="0.98" />
 
+    <ListView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/emergency_contacts_list"
+        app:layout_constraintBottom_toTopOf="@+id/register_emergency_contact_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_below="@+id/header"
+        android:layout_above="@+id/register_emergency_contact_button"
+        app:layout_constraintTop_toBottomOf="@+id/header"></ListView>
 
 
-</android.support.constraint.ConstraintLayout>
+
+</RelativeLayout>
