--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,4 +19,14 @@
         android:layout_below="@+id/display_name"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
+    <ImageButton
+        android:id="@+id/remove_contact"
+        android:src="@drawable/ic_delete_black_48dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="15dp"
+        android:background="@null" />
+
 </RelativeLayout>
