Atualizacao ongs pc da ana e SMS

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -27,6 +27,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="15dp"
-        android:background="@null" />
+        android:background="@null"
+        android:onClick="onContactRemoved"/>
 
 </RelativeLayout>
