--- a/app/src/main/res/layout/activity_help_button.xml
+++ b/app/src/main/res/layout/activity_help_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,10 +10,9 @@
         android:id="@+id/helpButton"
         android:layout_width="240dp"
         android:layout_height="234dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp"
         android:text="Pedir Ajuda"
         app:layout_constraintBottom_toTopOf="@+id/manageEmergencyContacts"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,10 +23,9 @@
         android:id="@+id/manageEmergencyContacts"
         android:layout_width="319dp"
         android:layout_height="35dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
         android:background="@android:color/holo_orange_light"
         android:fontFamily="@font/roboto_slab"
         android:text="Gerenciar contatos de Emergência"
@@ -39,4 +37,4 @@
         app:layout_constraintTop_toBottomOf="@+id/header"
         app:layout_constraintVertical_bias="0.98" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
