--- a/app/src/main/res/layout/activity_important_information.xml
+++ b/app/src/main/res/layout/activity_important_information.xml
@@ -6,16 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".OficialInformation">
 
-    <EditText
-        android:id="@+id/editText"
+    <TextView
+        android:id="@+id/contatosOficiais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="textMultiLine"
-        android:text="Contatos Oficiais"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -23,13 +21,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/centralAtendimento"
         android:layout_width="302dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/border_style"
-        android:text="Central de Atendimento à Mulher"
         android:textAlignment="center"
         android:textColor="#5371a3"
         android:textStyle="bold"
@@ -40,13 +37,12 @@
         tools:layout_editor_absoluteY="90dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/secretariaPoliticas"
         android:layout_width="299dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/border_style"
-        android:text="Secretaria de Políticas para as Mulheres"
         android:textAlignment="center"
         android:textColor="#5371a3"
         android:textStyle="bold"
@@ -57,12 +53,11 @@
         tools:layout_editor_absoluteY="175dp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ligue180"
         android:layout_width="68dp"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Ligue 180"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,12 +65,11 @@
         tools:layout_editor_absoluteY="121dp" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/secretariaText1"
         android:layout_width="192dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Recebe depoimentos através:"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,12 +77,11 @@
         tools:layout_editor_absoluteY="199dp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/secretariaText2"
         android:layout_width="247dp"
         android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="ouvidoria@spm.gov.br  spmulheres@spmulheres.gov.br"
         android:textAlignment="center"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
