--- a/app/src/main/res/layout/activity_onginformation.xml
+++ b/app/src/main/res/layout/activity_onginformation.xml
@@ -19,16 +19,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <EditText
+            <TextView
                 android:id="@+id/contatosOng"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="80dp"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="15dp"
                 android:ems="10"
-                android:inputType="textMultiLine"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.503"
@@ -40,7 +38,7 @@
                 android:id="@+id/tituloPatricia"
                 android:layout_width="285dp"
                 android:layout_height="31dp"
-                android:layout_marginStart="50dp"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
                 android:textColor=" #d8781e "
                 android:textStyle="bold"
@@ -54,8 +52,8 @@
                 android:id="@+id/agenciaPatricia"
                 android:layout_width="298dp"
                 android:layout_height="220dp"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
-                android:layout_marginStart="45dp"
                 android:background="@drawable/border_style"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +65,7 @@
                 android:id="@+id/tituloAssociacao"
                 android:layout_width="285dp"
                 android:layout_height="31dp"
-                android:layout_marginStart="50dp"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
                 android:textColor=" #d8781e "
                 android:textStyle="bold"
@@ -81,7 +79,7 @@
                 android:id="@+id/agenciaAssociacao"
                 android:layout_width="296dp"
                 android:layout_height="149dp"
-                android:layout_marginStart="45dp"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:background="@drawable/border_style"
                 android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
