--- a/app/src/main/res/layout/activity_important_information.xml
+++ b/app/src/main/res/layout/activity_important_information.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,22 +10,33 @@
         android:id="@+id/contatosOficiais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="15dp"
         android:ems="10"
         android:textAlignment="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="Autofill" />
 
     <TextView
         android:id="@+id/centralAtendimento"
         android:layout_width="302dp"
         android:layout_height="70dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="97dp"
+        android:layout_marginEnd="40dp"
         android:background="@drawable/border_style"
         android:textAlignment="center"
         android:textColor="#5371a3"
@@ -40,8 +51,12 @@
         android:id="@+id/secretariaPoliticas"
         android:layout_width="299dp"
         android:layout_height="80dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="188dp"
+        android:layout_marginEnd="41dp"
         android:background="@drawable/border_style"
         android:textAlignment="center"
         android:textColor="#5371a3"
@@ -56,8 +71,14 @@
         android:id="@+id/ligue180"
         android:layout_width="68dp"
         android:layout_height="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignStart="@+id/centralAtendimento"
+        android:layout_alignEnd="@+id/centralAtendimento"
+        android:layout_alignBottom="@+id/centralAtendimento"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="117dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="117dp"
+        android:layout_marginBottom="18dp"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,8 +89,14 @@
         android:id="@+id/secretariaText1"
         android:layout_width="192dp"
         android:layout_height="20dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignStart="@+id/secretariaPoliticas"
+        android:layout_alignTop="@+id/secretariaPoliticas"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginBottom="279dp"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,8 +107,14 @@
         android:id="@+id/secretariaText2"
         android:layout_width="247dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignTop="@+id/secretariaText1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="246dp"
         android:textAlignment="center"
         android:textColor="#2c302e"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,4 +123,4 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="212dp" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
