--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,6 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/home"
         android:title="Pedir Ajuda" />
+    <item android:id="@+id/oficial"
+        android:title="Contatos Oficiais" />
     <item android:id="@+id/ong"
         android:title="Contatos de ONGs" />
 </menu>
