--- a/app/src/main/res/layout/activity_psychologist_information.xml
+++ b/app/src/main/res/layout/activity_psychologist_information.xml
@@ -40,7 +40,7 @@
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
-                android:textColor=" #d8781e "
+                android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -67,7 +67,7 @@
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
-                android:textColor=" #d8781e "
+                android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -94,7 +94,7 @@
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
-                android:textColor=" #d8781e "
+                android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -121,7 +121,7 @@
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
-                android:textColor=" #d8781e "
+                android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -148,7 +148,7 @@
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
-                android:textColor=" #d8781e "
+                android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
