Ajuste + tela nova

--- a/app/src/main/res/layout/activity_psychologist_information.xml
+++ b/app/src/main/res/layout/activity_psychologist_information.xml
@@ -39,6 +39,7 @@
                 android:layout_width="285dp"
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
@@ -51,7 +52,7 @@
             <TextView
                 android:id="@+id/unip"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -66,6 +67,7 @@
                 android:layout_width="285dp"
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
@@ -78,7 +80,7 @@
             <TextView
                 android:id="@+id/mack"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -91,7 +93,7 @@
             <TextView
                 android:id="@+id/tituloUnib"
                 android:layout_width="285dp"
-                android:layout_height="31dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
@@ -107,6 +109,7 @@
                 android:layout_width="288dp"
                 android:layout_height="132dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
                 android:textAlignment="center"
@@ -118,8 +121,9 @@
             <TextView
                 android:id="@+id/tituloSAP"
                 android:layout_width="285dp"
-                android:layout_height="31dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
@@ -132,7 +136,7 @@
             <TextView
                 android:id="@+id/sap"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="130dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -147,6 +151,7 @@
                 android:layout_width="285dp"
                 android:layout_height="31dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
@@ -159,7 +164,7 @@
             <TextView
                 android:id="@+id/uniban"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -172,8 +177,9 @@
             <TextView
                 android:id="@+id/tituloFmu"
                 android:layout_width="285dp"
-                android:layout_height="31dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
@@ -186,7 +192,7 @@
             <TextView
                 android:id="@+id/fmu"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="110dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -199,8 +205,9 @@
             <TextView
                 android:id="@+id/tituloPan"
                 android:layout_width="285dp"
-                android:layout_height="31dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="5dp"
                 android:textAlignment="center"
                 android:textColor=" #31af31"
                 android:textStyle="bold"
@@ -213,7 +220,7 @@
             <TextView
                 android:id="@+id/pan"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -227,6 +234,7 @@
                 android:id="@+id/tituloPropisc"
                 android:layout_width="285dp"
                 android:layout_height="31dp"
+                android:layout_marginBottom="5dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
                 android:textColor=" #31af31 "
@@ -240,7 +248,7 @@
             <TextView
                 android:id="@+id/propisc"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
@@ -253,9 +261,10 @@
             <TextView
                 android:id="@+id/tituloUsp"
                 android:layout_width="285dp"
-                android:layout_height="31dp"
+                android:layout_height="34dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:textAlignment="center"
+                android:layout_marginBottom="5dp"
                 android:textColor=" #31af31 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -267,7 +276,7 @@
             <TextView
                 android:id="@+id/usp"
                 android:layout_width="288dp"
-                android:layout_height="132dp"
+                android:layout_height="110dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/border_style"
