Adição tela de violencias

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -14,4 +14,7 @@
                 android:title="Contatos de Institutos Psicológicos" />
         </menu>
     </item>
+    <item android:id="@+id/violence"
+           android:title="Tipos de Violência">
+    </item>
 </menu>
