--- a/app/src/main/res/layout/activity_violence_types.xml
+++ b/app/src/main/res/layout/activity_violence_types.xml
@@ -41,7 +41,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -67,7 +67,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -93,7 +93,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -119,7 +119,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -145,7 +145,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
@@ -171,7 +171,7 @@
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginBottom="5dp"
                 android:textAlignment="center"
-                android:textColor=" #cc2e2e "
+                android:textColor=" #871f78 "
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.555"
