--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -17,4 +17,7 @@
     <item android:id="@+id/violence"
            android:title="Tipos de Violência">
     </item>
+    <item android:id="@+id/report"
+        android:title="Reportar Caso">
+    </item>
 </menu>
